# dusty

./: '  .gitignore  Cargo.toml  LICENSE  Progress.md  README.md  index.html  output.txt  package-lock.json  package.json  ref.md  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/dusty/: main.rs  mod.rs
src-tauri/src/dusty/api/: anime.rs  empty_dir.rs  exe.rs  file_system.rs  git.rs  image.rs  lab.rs  mal.rs  media.rs  misc.rs  mod.rs  music.rs  opener.rs  overview.rs  pdf.rs  project.rs  recent.rs  session.rs  settings.rs  show.rs  system.rs  table.rs  terminal.rs  utility.rs  video.rs  zip.rs
src-tauri/src/dusty/data/: db.rs  exe.rs  file.rs  image.rs  media.rs  misc_dir.rs  mod.rs  pdf.rs  project.rs  session.rs  shows.rs  state.rs  zip.rs
src-tauri/src/dusty/db/: anime.rs  ban.rs  clean.rs  empty_dir_cache.rs  exe_cache.rs  exe_dir_cache.rs  init.rs  mal.rs  media.rs  misc_cache.rs  misc_dir_cache.rs  mod.rs  pdf_cache.rs  pdf_dir_cache.rs  project.rs  recent.rs  session_cache.rs  show.rs  show_cache.rs  zip_cache.rs  zip_dir_cache.rs
src-tauri/src/dusty/engine/: mod.rs
src-tauri/src/dusty/handlers/: anime.rs  audio.rs  default.rs  image.rs  mod.rs  video.rs
src-tauri/src/dusty/logger/: logger.rs
src-tauri/src/dusty/scanners/: dfs.rs  exe.rs  files.rs  media.rs  misc.rs  mod.rs  pdf.rs  project.rs  recursive_scanner.rs  show_scanner.rs  tree_builder.rs  zip.rs
src-tauri/src/dusty/system/: git.rs  mod.rs  terminal.rs
(+578 files in other folders)
