[package]
name = "dusty"
version = "0.1.0"
description = "A Tauri App"
authors = ["Asim"]
license = "MIT"
repository = "https://github.com/AsimMahata/dusty"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "dusty_lib"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
mime_guess = "2.0.5"
rand = "0.10.1"
rusqlite = { version = "0.31", features = ["bundled"] }
sha256 = "1.6.0"
regex = "1.13.0"
sysinfo = "0.30"
